// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Blogs correcly with no props 1`] = `
<DocumentFragment>
  <div>
    <h1
      data-testid="header"
    >
      Blogs Section
    </h1>
    <div>
      SearchBlog
    </div>
    <div>
      <p>
        No blogs
      </p>
    </div>
    <a>
      Profile
    </a>
  </div>
</DocumentFragment>
`;

exports[`Should render Blogs correcly with props 1`] = `
<DocumentFragment>
  <div>
    <h1
      data-testid="header"
    >
      Blogs Section
    </h1>
    <div>
      SearchBlog
    </div>
    <div>
      BlogItemBlogItem
    </div>
    <a>
      Profile
    </a>
  </div>
</DocumentFragment>
`;
